maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:75: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if(!aMurOuest()){
               ^ShortestPathMaze:81: error: not enough arguments for method aMurEst: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if(!aMurEst()){
             ^ShortestPathMaze:87: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if(!aMurNord()){
              ^ShortestPathMaze:93: error: not found: value eaMurSud
  if(!eaMurSud()){
      ^